# vipser

./: CMakeLists.txt  Dockerfile  Makefile  build-deps.sh  build-docker.sh  format.sh  metadata.yaml  test.sh  vipser.c
expected/: autorot  autorot-rotate90  blur-bigdecimal  blur-decimal  blur-int  chain-all  chain-resize-extract  chain-resize-extract-resize  expand-down  expand-up  export-bmp-q75  export-gif-q75  export-jpeg  export-jpeg-q100  export-jpeg-q25  export-jpeg-q95  export-png  export-tiff-q95  export-webp  export-webp-q100  export-webp-q25  export-webp-q95  extract-not-all  resize-down  resize-up  rotate180  rotate270  stretch-down  stretch-up
src/: Readme.md  commands.c  commands.h  io.c  io.h  sandbox.c  sandbox.h  sniffer.c  sniffing.c  sniffing.h  types.h  vips_glue.c  vips_glue.h  vipser.c
